[gd_scene load_steps=14 format=2]

[ext_resource path="res://Images/Lined.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Game Modes/Question & Answer.gd" type="Script" id=2]
[ext_resource path="res://Audio/AudioCorrect.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/AudioIncorrect.wav" type="AudioStream" id=4]
[ext_resource path="res://Font/Rawengulksans.tres" type="DynamicFont" id=5]
[ext_resource path="res://Font/Rawengulksans-8g8B.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Audio/Music/The-Agency-Heist-trimmed.ogg" type="AudioStream" id=7]
[ext_resource path="res://Font/Smaller_Rawengulksans.tres" type="DynamicFont" id=8]
[ext_resource path="res://Extra Scenes/HelpMe.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=3]
resource_name = "Fade"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Finality"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fade:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Question & Answer" type="TextureRect"]
margin_left = 304.0
margin_top = 371.0
margin_right = 506.0
margin_bottom = 621.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 101, 125 )
texture = ExtResource( 1 )
stretch_mode = 1
script = ExtResource( 2 )
HelpMe = ExtResource( 9 )

[node name="Question Text" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 30.25
margin_top = 6.0
margin_right = 930.25
margin_bottom = 126.0
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/normal_font = ExtResource( 5 )
text = "Question 01"

[node name="Answer 00" type="Button" parent="."]
margin_left = 30.0
margin_top = 98.0
margin_right = 380.0
margin_bottom = 159.0
rect_scale = Vector2( 0.4, 0.3 )
custom_fonts/font = SubResource( 1 )
text = "Answer 01"

[node name="Answer 01" type="Button" parent="."]
margin_left = 30.0
margin_top = 124.0
margin_right = 380.0
margin_bottom = 185.0
rect_scale = Vector2( 0.4, 0.3 )
custom_fonts/font = SubResource( 1 )
text = "Answer 02"

[node name="Answer 02" type="Button" parent="."]
margin_left = 30.0
margin_top = 149.5
margin_right = 380.0
margin_bottom = 210.5
rect_scale = Vector2( 0.4, 0.3 )
custom_fonts/font = SubResource( 1 )
text = "Answer 03"

[node name="Answer 03" type="Button" parent="."]
margin_left = 30.0
margin_top = 176.0
margin_right = 380.0
margin_bottom = 237.0
rect_scale = Vector2( 0.4, 0.3 )
custom_fonts/font = SubResource( 1 )
text = "Answer 04"

[node name="Win" type="ColorRect" parent="."]
visible = false
margin_right = 202.0
margin_bottom = 249.0
color = Color( 0, 0.301961, 0.133333, 1 )

[node name="Label" type="Label" parent="Win"]
modulate = Color( 0, 1, 0.0392157, 1 )
margin_left = 74.75
margin_top = 113.75
margin_right = 135.75
margin_bottom = 127.75
rect_scale = Vector2( 0.33, 0.33 )
custom_fonts/font = ExtResource( 5 )
text = "CORRECT!"

[node name="CPUParticles2D" type="CPUParticles2D" parent="Win"]
amount = 100
lifetime = 2.0
preprocess = 2.0
speed_scale = 1.1
fixed_fps = 120
spread = 90.0
gravity = Vector2( 0, 300 )
orbit_velocity = 0.5
orbit_velocity_random = 1.0
color = Color( 0, 1, 0.0392157, 1 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Win"]
position = Vector2( 200, 0 )
amount = 100
lifetime = 2.0
preprocess = 2.0
speed_scale = 1.1
fixed_fps = 120
spread = 90.0
gravity = Vector2( 0, 300 )
orbit_velocity = -0.5
orbit_velocity_random = 1.0
color = Color( 0, 1, 0.0392157, 1 )

[node name="Lose" type="ColorRect" parent="."]
visible = false
margin_right = 202.0
margin_bottom = 249.0
color = Color( 0.301961, 0, 0, 1 )

[node name="Label" type="Label" parent="Lose"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 66.625
margin_top = 111.875
margin_right = 136.625
margin_bottom = 125.875
rect_scale = Vector2( 0.33, 0.33 )
custom_fonts/font = ExtResource( 5 )
text = "Incorrect..."

[node name="CPUParticles2D" type="CPUParticles2D" parent="Lose"]
amount = 100
lifetime = 2.0
preprocess = 2.0
speed_scale = 1.1
fixed_fps = 120
spread = 90.0
gravity = Vector2( 0, 200 )
orbit_velocity = 0.05
orbit_velocity_random = 1.0
color = Color( 1, 0, 0, 1 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Lose"]
position = Vector2( 200, 0 )
amount = 100
lifetime = 2.0
preprocess = 2.0
speed_scale = 1.1
fixed_fps = 120
spread = 90.0
gravity = Vector2( 0, 200 )
orbit_velocity = -0.05
orbit_velocity_random = 1.0
color = Color( 1, 0, 0, 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 51.0
margin_top = 31.25
margin_right = 251.0
margin_bottom = 61.25
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )

[node name="AudioCorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sound"

[node name="AudioIncorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
autoplay = true
bus = "Music"

[node name="Results" type="ColorRect" parent="."]
visible = false
margin_right = 201.0
margin_bottom = 203.0
color = Color( 0.262745, 0.262745, 0.262745, 1 )

[node name="Label" type="Label" parent="Results"]
margin_left = 65.0
margin_right = 203.0
margin_bottom = 55.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 5 )
text = "Results"

[node name="Correct" type="Label" parent="Results"]
margin_top = 30.0
margin_right = 181.0
margin_bottom = 85.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 5 )
text = "Correct: #"

[node name="Wrong" type="Label" parent="Results"]
margin_top = 60.0
margin_right = 181.0
margin_bottom = 115.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 5 )
text = "Wrong: #"

[node name="ProgressBar" type="ProgressBar" parent="Results"]
margin_top = 90.0
margin_right = 200.0
margin_bottom = 110.0

[node name="Progress2" type="Label" parent="Results"]
margin_left = 65.0
margin_top = 110.0
margin_right = 203.0
margin_bottom = 140.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 8 )
text = "100 / 100"
align = 1

[node name="Continue" type="Button" parent="Results"]
margin_left = 77.5
margin_top = 180.0
margin_right = 146.5
margin_bottom = 205.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 8 )
text = "Continue"

[node name="Fade" type="ColorRect" parent="."]
visible = false
margin_top = 1.75
margin_right = 200.0
margin_bottom = 201.75
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 3 )
anims/RESET = SubResource( 4 )

[connection signal="pressed" from="Answer 00" to="." method="_on_Answer_pressed" binds= [ 0 ]]
[connection signal="pressed" from="Answer 01" to="." method="_on_Answer_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Answer 02" to="." method="_on_Answer_pressed" binds= [ 2 ]]
[connection signal="pressed" from="Answer 03" to="." method="_on_Answer_pressed" binds= [ 3 ]]
[connection signal="pressed" from="Results/Continue" to="." method="_on_Continue_pressed"]
